--- a/oceanmin/web/css/product-introduce.css
+++ b/oceanmin/web/css/product-introduce.css
@@ -3,105 +3,158 @@
     border-bottom:2px solid #0767bd;
 }
 /*主体部分*/
-.product_item{
-    border: 1px solid #efefef;
-    padding: 10px;
-    margin-bottom: 20px;
-    transition: all 0.3s;
+/*第0部分*/
+/*面包屑*/
+.breadcrumb {
+    font-weight: 400;
+    font-size: 14px;
+    margin:10px 0 10px 0;
+    padding:0;
 }
-.product_item img{
-    width: 100%;
+.breadcrumb a {
+    color: #999;
+    text-decoration: none;
 }
-.product_item:hover {
-    box-shadow: 5px 5px 30px #d8d8d8;
+.breadcrumb a:hover,
+.breadcrumb a:focus {
+    color: #000;
 }
-/*第一部分*/
-.product_goto{
-    width: 100%;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-
+.breadcrumb li.active:before {
+    content: "";
+    padding: 0;
 }
-// .product_goto .col-lg-3{
-//     border: 1px solid #efefef;
-//     border-collapse: collapse;
-//     /*border-collapse: separate;*/
-// }
-.the_table{
-    border:1;  
-    margin:0 auto;
-    border-collapse:collapse;      
+.breadcrumb.details-breadcrumb {
+    border: none;
 }
-.the_table_td{
-    border:1px solid #d8d8d8;
-    
-}
-.the_table_tr{
-    border:1px solid #d8d8d8;    
-}
-.product_goto  a{
+.breadcrumb > li {
     display: inline-block;
-    height: 45px;
-    padding: 10px 100px;
-    text-align: center;
-    /*vertical-align: baseline;*/
-    /* line-height: 45px; */
-    color: #2b2c33;
-    font-size: 18px;
-    /* min-width: 327px; */
-    margin: 0;
+    color: #000;
+    text-transform: uppercase;
 }
-.product_goto_fixed{
-    position: fixed;
-    top:0px;
-   margin-left: auto;
-    margin-right: auto;
-    background: #fff;
-    z-index: 999;
-}
-.product_goto_container{
-    padding-right: 7.5%;
-    padding-left: 7.5%;
-    width: 100%;
-    min-width: 900px;
 
+/*第一部分*/
+.section1{
+    text-align: center;
 }
-/*.product_goto .the_middle{*/
-    /*border-left: 1px solid transparent;*/
-    /*border-right: 1px solid transparent;*/
-/*}*/
+.section1 img{
+    width: 100%;
+    height: auto;
+}
+
 /*第二部分*/
 .section2{
     padding-top: 40px;
     padding-bottom: 50px;
 }
-.product_category_title h2{
-    text-align: center;
-    font-family: DINOT-Medium;
-    font-size: 24px;
-    color: #2b2c33;
-    margin-top: 20px;
-    margin-bottom: 40px;
+/*左侧部分********************/
+.business-one{
+
 }
-.the_p_fa{
-    padding-top:20px;
-    padding-left: 25px;
-    padding-right: 25px;
-    padding-bottom: 40px;
-    height: 96px;
+.business-left-title h3{
+    padding: 14px  20px 10px 14px;
+    background: #FAFAFC;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-bottom:10px;
 }
-.the_p_fa p{
-    color: #2b2c33;
+.business-name h3{
+    padding: 14px  20px 10px 14px;
+    background: #FAFAFC;
+    border-radius: 8px;
+    cursor: pointer;
 }
 
-/*第三部分*/
-.section3{
-    padding-bottom: 50px;
+.business-left-title h3:hover,
+.business-name h3:hover{
+    background-color: #66BE8C;
+    color: #fff;
 }
-/*第四部分*/
-.section4{
-    padding-bottom: 50px;
+.business-name h3 img{
+    float: right;
+    padding-top: 10px;
+}
+.business-name hr{
+    height: 1px;
+    background: #efefef;
+    width: 260px;
+    border: none;
+
+}
+.business-content{
+    display: none;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #efefef;
+    margin: 0 10px 10px 10px;
+}
+.business-content p{
+    font-size: 18px;
+    padding: 14px 5px 14px 0;
+    text-indent: 20px;    
+}
+.business-content a span{
+    position: relative;
+}
+.triangle_green{
+    position: absolute;
+    top:17.5px;
+    display: none;
+}
+.business-content a{
+    color: #2B2C33;
+}
+.business-content a:hover{
+    color: #66BE8C;
+}
+.business-content a:active{
+    color: #66BE8C;
+}
+/*商业联系*/
+.business-contact{
+    border: 1px solid #66BE8C;
+    padding: 20px 10px 30px;
+    margin-top: 147px;
+}
+.business-contact h5{
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+.business-contact p{
+    font-size: 14px;
+    padding: 9px 0;
+}
+.business-contact p span{
+    color: #66676E;
+}
+.business-contact p:last-of-type{
+    margin-bottom:20px;
+}
+.business-contact_ctrl{}
+
+
+/*右侧部分*********************************/
+.product_item_pic{
+    border: 1px solid #D8D8D8;
+    padding: 10px 10px 20px;
+}
+.business-right img{
+    width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+}
+.business-pic-son{
+    margin-bottom:40px;
+}
+.business-pic-son p{
+    font-size: 14px;
+    color: #2D2D33;
+    letter-spacing: -0.34px;
+    text-overflow: -o-ellipsis-lastline;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+.business-pic-son  a{
+    color: #2D2D33;
 }
