--- a/oceanmin/web/css/home.css
+++ b/oceanmin/web/css/home.css
@@ -89,45 +89,25 @@
     color: #2b2c33;
     text-align: center;
 }
-.col_part2{
-    height: 390px;
-    width: 280px;
+.you_may_buy{
+    padding: 10px 10px 20px;
     border: 1px solid #efefef;
-    padding: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
 }
-.col_part2:hover{
-    box-shadow: 5px 5px 30px #d8d8d8;
+.you_may_buy img{
+
+}
+.you_may_buy p{
+    padding: 20px 0;
+    font-size: 14px;
+    color: #2D2D33;
+    letter-spacing: -0.34px;
+    text-overflow: -o-ellipsis-lastline;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
-.col_part2_first{
-    margin-left: 0;
-}
-.col_part2_last{
-    margin-right: 0;
-}
-.col_part2 img{
-    width: 240px;
-    height: 240px;
-}
-.col_part2 p{
-    text-align: center;
-    color: #2b2c33;
-    margin-top:30px;
-    font-size:14px;
-    line-height:20px;
-}
-.row_part_title a{
-    text-align: center;
-    color: #2b2c33;
-    font-size: 14px;
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-    width:370px;
-    height:40px;
-    padding:14px 140px;
-    margin-top:40px;
-    background:#EFEFEF;
-}
+
+
