--- a/oceanmin/web/css/home.css
+++ b/oceanmin/web/css/home.css
@@ -108,6 +108,7 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
-
-
+#owl-carousel_second .owl-dots {
+    display: block !important;
+}
 
