--- a/oceanmin/web/css/main.css
+++ b/oceanmin/web/css/main.css
@@ -94,11 +94,11 @@ header .navbar{
 
 /*logo*/
 .logo{
-    margin-top:20px;
+    margin-top:10px;
 }
 .logo img{
-    width: 240px;
-    height: 20px;
+    width: 105px;
+    height: 40px;
     margin-right: 5px;
     display: inline-block;
 }
@@ -174,10 +174,14 @@ header .navbar{
 .second_menu ul li{
    /*display: inline-block;*/
     padding: 18px 10px;
-}.second_menu ul li:hover{
+}
+.second_menu ul li:hover{
      /*display: inline-block;*/
      background-color: #f2f2f2;
  }
+.second_menu .slol_faq{
+    padding: 18px 55px;
+}
 .second_menu a{
     font-size: 14px;
     color: #2b2c33;
