--- a/oceanmin/web/css/main.css
+++ b/oceanmin/web/css/main.css
@@ -144,7 +144,7 @@ header .navbar{
 }
 
 .menu ul li a:hover{
-    border-bottom:2px solid #0767bd;
+    border-bottom:2px solid #009240;
 }
 .menu ul li{
     position: relative;
