--- a/oceanmin/web/css/company_info.css
+++ b/oceanmin/web/css/company_info.css
@@ -1,6 +1,6 @@
 /*导航的下划线*/
 .menu ul li:nth-child(4) a{
-    border-bottom:2px solid #0767bd;
+    border-bottom:2px solid #009240 ;
 }
 .to_about_us ul li:nth-child(1) a{
     color: #0767bd;
