--- a/oceanmin/web/css/contact_us.css
+++ b/oceanmin/web/css/contact_us.css
@@ -1,5 +1,5 @@
 .menu ul li:nth-child(5) a{
-    border-bottom:2px solid #0767bd;
+    border-bottom:2px solid #009240 ;
 }
 /*主体部分*/
 /*第一部分*/
@@ -11,7 +11,7 @@
 }
 /*第二部分*/
 .section2{
-    padding-top: 114px;
+    padding-top: 40px;
     padding-bottom: 60px;
 }
 .container_contact_us_map{
@@ -86,7 +86,7 @@
 }
 .contact_us_form .contact_us_submit{
     margin-left:20px;
-    text-align: left;
+    text-align: center;
     border-radius: 6px;
     width: 180px;
     height: 50px;
