--- a/oceanmin/web/mobile/css/faq.css
+++ b/oceanmin/web/mobile/css/faq.css
@@ -4,7 +4,7 @@
     padding-top: 5.6rem;
 }
 .section0{
-    background-image: url("../img/pdf@0.5x.png");
+    background-image: url("../img/faq.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 375px 94px;
