--- a/oceanmin/web/mobile/css/main.css
+++ b/oceanmin/web/mobile/css/main.css
@@ -50,8 +50,8 @@
         text-align: center;
     }
     .top_menu .logo img{
-        width: 11.9rem;
-        height: 1rem;
+        width: 105px;
+        height: 40px;
     }
     .top_menu i{
         /*width: 1rem;*/
