--- a/oceanmin/web/css/contact_us.css
+++ b/oceanmin/web/css/contact_us.css
@@ -85,6 +85,7 @@
     text-indent: 10px;
 }
 .contact_us_form .contact_us_submit{
+    text-indent: 0;
     margin-left:20px;
     text-align: center;
     border-radius: 6px;
