--- a/oceanmin/web/mobile/css/company_information.css
+++ b/oceanmin/web/mobile/css/company_information.css
@@ -2,7 +2,7 @@
     padding-top: 5.6rem;
 }
 .section0{
-    background-image: url("../img/company_info.png");
+    background-image: url("../img/company_info.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 375px 175px;
