--- a/oceanmin/web/mobile/css/item.css
+++ b/oceanmin/web/mobile/css/item.css
@@ -1,22 +1,31 @@
-.short_description b{        
-        font-size:1.4rem;
-    }
-.detail_description p{
-    font-size: 1.4rem;
-
+.contact_us_fa{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+.short_description b,
+.short_description p,
+.short_description span,
+.short_description strong{
+    font-size:1.4rem !important;
+    font-family: "Microsoft YaHei UI" !important;
+    line-height: 30px !important;
+}
+.short_description{
+    font-family: "Microsoft YaHei UI" !important;
 }
 .detail_description span{
-    font-size: 1.4rem !important;    
+    font-size: 1.4rem !important;
     word-wrap: break-word;
 }
-.detail_description{    
+.detail_description{
     padding: 0 10px;
-    font-size: 1.4rem;    
-}
-.detail_description a{ 
     font-size: 1.4rem;
 }
-.detail_description table{ 
+.detail_description a{
+    font-size: 1.4rem;
+}
+.detail_description table{
     font-size: 1.4rem;
 }
 .detail_description table tr,
@@ -26,110 +35,115 @@
 .detail_description table tr p,
 .detail_description table td p,
 .detail_description table tr p span,
-.detail_description table td p span{ 
+.detail_description table td p span{
     font-size: 1.4rem;
     word-wrap: break-word;
 }
-.detail_description table tr{ 
-    // width:100% !important;
+.detail_description table tr{
+// width:100% !important;
 }
-.detail_description table td{ 
-    // width:100% !important;
-}
-
-.detail_description table td:nth-child(odd) p{
-    width:68px !important;
-}
-.detail_description table td:nth-child(even) p{
-    width:200px !important;
+.detail_description table td{
+// width:100% !important;
 }
 
-    .section{
-        padding-top: 5.6rem;
-    }
-    .section1{
-        margin-top:40px;
-        text-align: center;
-    }
-    .item_pic{
-        position: relative;
-        width:100% ;
-        height: 100%;
-        margin: 0 auto;
-    }
-    .left_btn{
-        width: 20px;
-        height: 90px;
-        position: absolute;
-        left: 0;
-        top: 50%;
-        margin-top:-45px;
-    }
-    .product_pic{
-        width: 100%;
-        height: auto;
-    }
-    .right_btn{
-        width: 20px;
-        height: 90px;
-        position: absolute;
-        right: 0;
-        top: 50%;
-        margin-top:-45px;
-    }
-    .item_name {
-        text-align:center;
-    }
-    .item_name p{
-        font-size: 1.4rem;
-        color: #2b2c33;
-        line-height:2.4rem;
-        padding: 10px 10px 30px 10px;
-    }
-    .fivepics_smallpic{
-        display: none;
-    }
-    /*第二部分*/
-    .short_description{
-        width: 100%;
-        padding: 0 10px;
-        margin: 0 auto;
-        font-size:1.4rem;
-    }
-    .short_description h3{
-        font-weight:normal;
-        font-size: 18px;
-        color: #2B2C33;
-        letter-spacing: 0px;
-        margin-bottom:10px;
-    }
-    .the_feature p{
-        font-size: 1.4rem;
-        color: #2B2C33;
-        line-height: 30px;
-    }
-    .the_feature{
-        margin-bottom:30px;
-        font-size: 1.4rem;
-    }
-    .the_description p{
-        font-size: 1.4rem;
-        color: #2B2C33;
-        letter-spacing: 0px;
-        line-height: 20px;
-    }
-    .the_description{
-        margin-bottom:40px;
-        font-size: 1.4rem;
-    }
-    .the_description span{        
-        font-size: 1.4rem;
-    }
-    .detail_description{
-        width: 100%;
-        padding: 0 10px;
-        font-size: 1.4rem;
-    }
+/*.detail_description table td:nth-child(odd) p{*/
+/*width:68px !important;*/
+/*}*/
+/*.detail_description table td:nth-child(even) p{*/
+/*width:200px !important;*/
+/*}*/
+
+.section{
+    padding-top: 5.6rem;
+}
+.section1{
+    margin-top:40px;
+    text-align: center;
+}
+.item_pic{
+    position: relative;
+    width:100% ;
+    height: 100%;
+    margin: 0 auto;
+}
+.left_btn{
+    width: 20px;
+    height: 90px;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    margin-top:-45px;
+}
+.product_pic{
+    width: 100%;
+    height: auto;
+}
+.right_btn{
+    width: 20px;
+    height: 90px;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    margin-top:-45px;
+}
+.item_name {
+    text-align:center;
+}
+.item_name p{
+    font-size: 1.4rem;
+    color: #2b2c33;
+    line-height:2.4rem;
+    padding: 10px 10px 30px 10px;
+}
+.fivepics_smallpic{
+    display: none;
+}
+/*第二部分*/
+.short_description{
+    width: 100%;
+    padding: 0 10px;
+    margin: 0 auto;
+    font-size:1.4rem;
+}
+.short_description h3{
+    font-weight:normal;
+    font-size: 18px;
+    color: #2B2C33;
+    letter-spacing: 0px;
+    margin-bottom:10px;
+}
+.the_feature p{
+    font-size: 1.4rem;
+    color: #2B2C33;
+    line-height: 30px;
+}
+.the_feature{
+    margin-bottom:30px;
+    font-size: 1.4rem;
+}
+.the_description p{
+    font-size: 1.4rem;
+    color: #2B2C33;
+    letter-spacing: 0px;
+    line-height: 20px;
+}
+.the_description{
+    margin-bottom:40px;
+    font-size: 1.4rem;
+    line-height: 20px;
+}
+.the_description span{
+    font-size: 1.4rem;
+}
+.detail_description{
+    width: 100%;
+    padding: 0 10px;
+    font-size: 1.4rem;
+    overflow-x: scroll !important;
+}
+.detail_description table{
+
+}
 
 
 
