--- a/oceanmin/web/css/special_technology.css
+++ b/oceanmin/web/css/special_technology.css
@@ -46,11 +46,31 @@
     color: #fff;
 }
 /*第二部分*/
+.Special_Technology_content h2{
+    text-align: center;
+    font-size: 24px;
+    font-weight:bold;
+    color: #2b2c33;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.Special_Technology_content h3{
+    font-size: 18px;
+    color: #2b2c33;
+    margin-bottom: 20px;
+}
+.Special_Technology_content h3:nth-of-type(2){
+    font-size: 18px;
+    color: #2b2c33;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
 .Special_Technology_content p{
     font-size: 18px;
     color: #2b2c33;
-}.Special_Technology_content p:first-of-type{
-     margin-top: 40px;
+}
+.Special_Technology_content p:first-of-type{
+     margin-top: 20px;
  }
 .Special_Technology_content img{
    width: 100%;
