--- a/oceanmin/web/css/company_info.css
+++ b/oceanmin/web/css/company_info.css
@@ -46,12 +46,12 @@
 }
 /*第二部分*/
 .section2{
-    padding-top: 40px;
+    /*padding-top: 40px;*/
 }
 .section2 img{
     width: 100%;
     height: auto;
-    margin-bottom: 78px;
+    margin-bottom: 40px;
 }
 .section2 p{
     margin: 20px 0;
