--- a/oceanmin/web/mobile/css/main.css
+++ b/oceanmin/web/mobile/css/main.css
@@ -220,3 +220,123 @@
 
 }
 /*# sourceMappingURL=main.css.map */
+
+
+
+/*分页样式*/
+.pagination {
+  margin: 20px 5px 20px 0;
+}
+    .pagination a{
+        color: #009240;
+    }
+
+.pagination ul {
+  display: inline-block;
+  *display: inline;
+  margin-bottom: 0;
+  margin-left: 0;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+  *zoom: 1;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+     -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+}
+
+.pagination ul > li {
+  display: inline;
+}
+
+.pagination ul > li > a,
+.pagination ul > li > span {
+  float: left;
+  padding: 4px 12px;
+  line-height: 20px;
+  text-decoration: none;
+  background-color: #ffffff;
+  border: 1px solid #dddddd;
+  border-left-width: 0;
+}
+
+.pagination ul > li > a:hover,
+.pagination ul > li > a:focus,
+.pagination ul > .active > a,
+.pagination ul > .active > span {
+  background-color: #f5f5f5;
+}
+
+.pagination ul > .active > a,
+.pagination ul > .active > span {
+  color: #999999;
+  cursor: default;
+}
+
+.pagination ul > .disabled > span,
+.pagination ul > .disabled > a,
+.pagination ul > .disabled > a:hover,
+.pagination ul > .disabled > a:focus {
+  color: #999999;
+  cursor: default;
+  background-color: transparent;
+}
+
+.pagination ul > li:first-child > a,
+.pagination ul > li:first-child > span {
+  border-left-width: 1px;
+  -webkit-border-bottom-left-radius: 4px;
+          border-bottom-left-radius: 4px;
+  -webkit-border-top-left-radius: 4px;
+          border-top-left-radius: 4px;
+  -moz-border-radius-bottomleft: 4px;
+  -moz-border-radius-topleft: 4px;
+}
+
+.pagination ul > li:last-child > a,
+.pagination ul > li:last-child > span {
+  -webkit-border-top-right-radius: 4px;
+          border-top-right-radius: 4px;
+  -webkit-border-bottom-right-radius: 4px;
+          border-bottom-right-radius: 4px;
+  -moz-border-radius-topright: 4px;
+  -moz-border-radius-bottomright: 4px;
+}
+
+.pull-right{
+    float:right;
+}
+
+
+//overrrides
+.pagination ul > li:last-child > a,
+.pagination ul > li:last-child > span,
+.pagination ul > li:first-child > a,
+.pagination ul > li:first-child > span{
+    color: #bcc6d3;
+}
+.pagination ul > li:last-child > a:hover,
+.pagination ul > li:last-child > span:hover,
+.pagination ul > li:first-child > a:hover,
+.pagination ul > li:first-child > span:hover{
+    color: #4f4f4f;
+}
+.pagination ul > li > a, .pagination ul > li > span{
+    border-color: #d0dde9;
+    color: #4f4f4f;
+    box-shadow: 0px 1px 0px 0px #efefef;
+    transition: background-color .1s linear;
+    -moz-transition: background-color .1s linear; /* Firefox 4 */
+    -webkit-transition: background-color .1s linear; /* Safari and Chrome */
+    -o-transition: background-color .1s linear;  /* Opera */
+}
+.pagination ul > li > a.active{
+    color: #3b9ff3;
+}
+.pagination ul > li > a:hover,
+.pagination ul > li > a:focus,
+.pagination ul > .active > a,
+.pagination ul > .active > span {
+    background-color: #f5f5f5;
+}
+
