--- a/oceanmin/web/mobile/css/technology.css
+++ b/oceanmin/web/mobile/css/technology.css
@@ -11,6 +11,7 @@
     font-size: 18px;
     color: #2b2c33;
     margin-bottom: 20px;
+    text-indent: 10px;
 }
 .Special_Technology_content h3:nth-of-type(2){
     font-size: 18px;
