--- a/oceanmin/web/mobile/css/main.css
+++ b/oceanmin/web/mobile/css/main.css
@@ -50,7 +50,7 @@
         text-align: center;
     }
     .top_menu .logo img{
-        width: 77px;
+        width: ;
         height: 40px;
     }
     .top_menu i{
