--- a/oceanmin/web/css/main.css
+++ b/oceanmin/web/css/main.css
@@ -97,7 +97,7 @@ header .navbar{
     margin-top:10px;
 }
 .logo img{
-    width: 77px;
+    width:;
     height: 40px;
     margin-right: 5px;
     display: inline-block;
