--- a/oceanmin/web/css/contact_us.css
+++ b/oceanmin/web/css/contact_us.css
@@ -51,7 +51,7 @@
 }
 .contact_us_form_child{
     background-color: #efefef;
-    padding: 20px 30px 37px 20px;
+    padding: 20px 20px 37px 20px;
 }
 .contact_us_form_child hr{
     height: 1px;
@@ -70,17 +70,19 @@
 .contact_us_form input{
     border: 1px solid #D5D5D5;
     font-size: 14px;
-    width: 657px;
-    height: 50px;
+    width: 407px;
+    height: 40px;
     text-indent: 10px;
     margin-top: 15px;
-    display: none;
+}
+.contact_us_form .input_left{
+    margin-right: 20px;
 }
 .contact_us_form  textarea{
     font-size: 14px;
     margin-top: 15px;
     border: 1px solid #D5D5D5;
-    width:850px;
+    width:100%;
     height: 100px;
     text-indent: 10px;
 }
