--- a/oceanmin/web/mobile/css/news_pages.css
+++ b/oceanmin/web/mobile/css/news_pages.css
@@ -1,5 +1,5 @@
 .section{
-    padding-top: 5.6rem;
+    padding-top: 56px;
 }
 @media screen and (max-width: 374px){
     .section1 .customize_writing{
