--- a/oceanmin/web/mobile/css/pdf_download.css
+++ b/oceanmin/web/mobile/css/pdf_download.css
@@ -2,7 +2,7 @@
 
     /*第二部分*/
     .section{
-        padding-top: 5.6rem;
+        padding-top: 56px;
     }
     .section0{
         background-image: url("../img/pdf@0.5x.png");
