--- a/oceanmin/web/mobile/css/faq.css
+++ b/oceanmin/web/mobile/css/faq.css
@@ -1,7 +1,7 @@
 
 /*第二部分*/
 .section{
-    padding-top: 5.6rem;
+    padding-top: 56px;
 }
 .section0{
     background-image: url("../img/faq.jpg");
@@ -13,7 +13,9 @@
 .section1{
     text-align: center;
 }
-
+.faq{
+    margin: 40px auto;
+}
 
 @media screen and (max-width: 374px){
     .faq{
