--- a/oceanmin/web/mobile/css/home.css
+++ b/oceanmin/web/mobile/css/home.css
@@ -1,39 +1,28 @@
+
 /*主体部分*/
 /*第0部分*/
 .section0{
-    padding-top: 5.6rem;
+    padding-top: 56px;
 }
 .section1{
     /*margin-top: 5px;*/
     margin-bottom: 40px;
 }
 .section1 .ac{
-    display: flex;
-    display: -moz-box; /*Firefox*/
-    display: -webkit-box; /*Safari,Opera,Chrome*/
-    display: -webkit-flex;
     padding: 10px;
-    /*width: 710px;*/
 }
 .ac_pic{
-    text-align: right;
-    flex: 1;
-    -webkit-flex: 1;
-    -webkit-box-flex: 1;
-    -moz-box-flex: 1;
-    -ms-flex: 1;
+    float: left;
+    width: 50%;
 }
 .ac_pic img{
     width:100%;
     height:auto;
 }
 .ac_words{
-    flex: 1;
-    box-flex: 1.0;
-    -webkit-flex: 1;
-    -webkit-box-flex: 1;
-    -moz-box-flex: 1;
-    -ms-flex: 1;
+    float: left;
+    width: 50%;
+    min-height: 150px;
     padding-left: 20px;
     position: relative;
 }
@@ -58,11 +47,11 @@
 .ac_words .span{
     font-size: 1.2rem;
     color: #66676e;
-    padding: 0.6rem 0.4rem;
+    width: ;
+    display: inline-block;
+    padding: 6px 4px;
     border: 1px solid #d8d8d8;
     border-radius: 4px;
-    right: 5.5rem;
-    position: absolute;
 }
 /*第二部分*/
 .section2{
@@ -72,19 +61,11 @@
     font-size: 1.4rem;
     margin-bottom: 30px;
 }
-.swiper-container-home{
-    width: 100%;
-    height: auto;
-    padding: 0 0 40px;
-    position: relative;
-    overflow: hidden;
-    z-index: 1;
-}
 .recommend{
     display: inline-block;
     float: left;
-    margin: 0 10px;
-    width: calc(100% - 20px);
+    margin: 0 2.67%;
+    width: 44.66%;
     text-align: center;
 }
 .recommend_fa{
@@ -106,8 +87,8 @@
     text-align: left;
     font-size: 1.4rem;
     color:#2b2c33;
-    height:35px;
-    margin: 10px 0 25px 0;
+    height:31px;
+    margin: 10px 0 30px 0;
     text-overflow: -o-ellipsis-lastline;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -117,39 +98,3 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
-.swiper-button-prev:before{
-    content: "pre" !important;
-    font-size: 14px !important;
-}
-.swiper-button-prev{
-    background-image: none !important;
-    display: block !important;
-    border: 1px solid #d8d8d8 !important;
-    padding: 5px 15px !important;
-    top:100% !important ;
-     width: 60px  !important ;
-     height: auto  !important ;
-    margin-top: -40px !important ;
-    left: 30% !important;
-}
-.swiper-button-next:before{
-    content: "next" !important;
-    font-size: 14px !important;
-}
-.swiper-button-next{
-    background-image: none !important;
-    display: block !important;
-    border: 1px solid #d8d8d8 !important;
-    padding: 5px 15px !important;
-    top:100% !important ;
-    width: 60px  !important ;
-    height: auto  !important ;
-    margin-top: -40px !important ;
-    right: 30% !important;
-}
-.swiper-pagination-fraction{
-    font-family:"Microsoft YaHei UI" !important;
-    bottom: 17px !important;
-    font-size: 1.6rem !important;
-}
-
