--- a/oceanmin/web/mobile/css/main.css
+++ b/oceanmin/web/mobile/css/main.css
@@ -5,6 +5,11 @@
     font-size: 62.5%;
     box-sizing: border-box;
 }
+body{
+    min-width: 320px;
+    max-width:900px;
+    margin: 0 auto;
+}
 
 ul,li{
     list-style: none;
@@ -33,24 +38,27 @@ header{
     position: fixed;
     background-color: #fff;
     z-index: 999;
+    min-width: 320px;
+    max-width:900px;
 }
 .top_menu{
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-align:center;
-    align-items:center;
-    -webkit-box-pack:center;
-    justify-content:center;
+    /*display: -webkit-box;*/
+    /*!*display: flex;*!*/
+    /*-webkit-box-align:center;*/
+    /*align-items:center;*/
+    /*-webkit-box-pack:center;*/
+    /*justify-content:center;*/
     position: relative;
-    height: 5.6rem;
+    height: 56px;
     border-bottom:1px solid #d8d8d8;
 }
 .top_menu .logo{
     text-align: center;
+    padding-top: 8px;
 }
 .top_menu .logo img{
     width: ;
-    height: 40px;
+    height:40px;
 }
 .top_menu i{
     /*width: 1rem;*/
@@ -97,7 +105,7 @@ header{
 }
 .footer_menu_child li a{
     font-size:1.4rem;
-    display: block;
+    display:block;
 }
 .footer_menu_child li:first-of-type{
     padding-top:2rem;
@@ -207,7 +215,7 @@ header{
 }
 .side_menu_child li a{
     font-size: 1.4rem;
-    display: block;
+    display:block;
 }
 .side_menu_child li:first-of-type{
     padding-top:2rem;
@@ -219,24 +227,19 @@ header{
     border-bottom: 1px solid #d8d8d8 ;
 }
 
-
-/*# sourceMappingURL=main.css.map */
-
-
-
 /*分页样式*/
 .pagination {
-  margin: 20px 5px 20px 0;
+    margin: 20px 5px 20px 0;
 }
- .pagination a{
-  color: #009240;
- }
+.pagination a{
+    color: #009240;
+}
 
 .pagination ul {
     display: block;
     margin-bottom: 0;
     position: absolute;
-    left: calc(50% - 78px);
+    left: calc(50% - 60px);
     /* margin-left: -14%; */
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -247,61 +250,61 @@ header{
 }
 
 .pagination ul > li {
-  display: inline;
+    display: inline;
 }
 
 .pagination ul > li > a,
 .pagination ul > li > span {
-  float: left;
-  padding: 4px 12px;
-  line-height: 20px;
-  text-decoration: none;
-  background-color: #ffffff;
-  border: 1px solid #dddddd;
-  border-left-width: 0;
+    float: left;
+    padding: 4px 12px;
+    line-height: 20px;
+    text-decoration: none;
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
+    border-left-width: 0;
 }
 
 .pagination ul > li > a:hover,
 .pagination ul > li > a:focus,
 .pagination ul > .active > a,
 .pagination ul > .active > span {
-  background-color: #f5f5f5;
+    background-color: #f5f5f5;
 }
 
 .pagination ul > .active > a,
 .pagination ul > .active > span {
-  color: #999999;
-  cursor: default;
+    color: #999999;
+    cursor: default;
 }
 
 .pagination ul > .disabled > span,
 .pagination ul > .disabled > a,
 .pagination ul > .disabled > a:hover,
 .pagination ul > .disabled > a:focus {
-  color: #999999;
-  cursor: default;
-  background-color: transparent;
+    color: #999999;
+    cursor: default;
+    background-color: transparent;
 }
 
 .pagination ul > li:first-child > a,
 .pagination ul > li:first-child > span {
-  border-left-width: 1px;
-  -webkit-border-bottom-left-radius: 4px;
-          border-bottom-left-radius: 4px;
-  -webkit-border-top-left-radius: 4px;
-          border-top-left-radius: 4px;
-  -moz-border-radius-bottomleft: 4px;
-  -moz-border-radius-topleft: 4px;
+    border-left-width: 1px;
+    -webkit-border-bottom-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    -webkit-border-top-left-radius: 4px;
+    border-top-left-radius: 4px;
+    -moz-border-radius-bottomleft: 4px;
+    -moz-border-radius-topleft: 4px;
 }
 
 .pagination ul > li:last-child > a,
 .pagination ul > li:last-child > span {
-  -webkit-border-top-right-radius: 4px;
-          border-top-right-radius: 4px;
-  -webkit-border-bottom-right-radius: 4px;
-          border-bottom-right-radius: 4px;
-  -moz-border-radius-topright: 4px;
-  -moz-border-radius-bottomright: 4px;
+    -webkit-border-top-right-radius: 4px;
+    border-top-right-radius: 4px;
+    -webkit-border-bottom-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    -moz-border-radius-topright: 4px;
+    -moz-border-radius-bottomright: 4px;
 }
 
 .pull-right{
@@ -310,12 +313,12 @@ header{
 
 
 //overrrides
-.pagination ul > li:last-child > a,
-.pagination ul > li:last-child > span,
-.pagination ul > li:first-child > a,
-.pagination ul > li:first-child > span{
-    color: #bcc6d3;
-}
+  .pagination ul > li:last-child > a,
+  .pagination ul > li:last-child > span,
+  .pagination ul > li:first-child > a,
+  .pagination ul > li:first-child > span{
+      color: #bcc6d3;
+  }
 .pagination ul > li:last-child > a:hover,
 .pagination ul > li:last-child > span:hover,
 .pagination ul > li:first-child > a:hover,
@@ -340,4 +343,5 @@ header{
 .pagination ul > .active > span {
     background-color: #f5f5f5;
 }
+
 
