--- a/oceanmin/web/mobile/css/news.css
+++ b/oceanmin/web/mobile/css/news.css
@@ -1,121 +1,45 @@
+.section{
+    padding-top: 56px;
+}
+.section1 .news{
+    display: -webkit-box;
+    display: flex;
+    display: -webkit-flex;
+    width: 100%;
+    padding: 10px;
+}
+.news_pic{
+    width: 52%;
+}
+.news_pic img{
+    width:100%;
+    height: auto;
+}
+.news_words{
+    width: 191px;
+    padding-left: 8.5px;
+    position: relative;
+}
+.news_words h3{
+    width: 191px;
+    font-size: 1.2rem;
+    color: #2b2c33;
+    margin-bottom: 5px;
+}
+.news_child_short_des {
+    width: 191px;
+    font-size: 1.1rem;
+    color: #66676e;
+    text-overflow: -o-ellipsis-lastline;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
 
 
-    .section{
-        padding-top: 5.6rem;
-    }
-    .section1 .news{
-        display: -webkit-box;
-        display: flex;
-        display: -webkit-flex;
-        width: 100%;
-        padding: 10px;
-    }
-    .news_pic{
-        width: 52%;
-    }
-    .news_pic img{
-        width:100%;
-        height: auto;
-    }
-    .news_words{
-        width: 191px;
-        padding-left: 8.5px;
-        position: relative;
-    }
-    .news_words h3{
-        width: 191px;
-        font-size: 1.2rem;
-        color: #2b2c33;
-        margin-bottom: 5px;
-    }
-    .news_child_short_des {
-        width: 191px;
-        font-size: 1.1rem;
-        color: #66676e;
-        text-overflow: -o-ellipsis-lastline;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
-    }
 
 
 
 /*# sourceMappingURL=news.css.map */
-/*分页样式*/
-.pagination {
-  margin: 20px 0;
-}
-
-.pagination ul {
-  display: inline-block;
-  *display: inline;
-  margin-bottom: 0;
-  margin-left: 0;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
-  *zoom: 1;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-     -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-}
-
-.pagination ul > li {
-  display: inline;
-}
-
-.pagination ul > li > a,
-.pagination ul > li > span {
-  float: left;
-  padding: 4px 12px;
-  line-height: 20px;
-  text-decoration: none;
-  background-color: #ffffff;
-  border: 1px solid #dddddd;
-  border-left-width: 0;
-}
-
-.pagination ul > li > a:hover,
-.pagination ul > li > a:focus,
-.pagination ul > .active > a,
-.pagination ul > .active > span {
-  background-color: #f5f5f5;
-}
-
-.pagination ul > .active > a,
-.pagination ul > .active > span {
-  color: #999999;
-  cursor: default;
-}
-
-.pagination ul > .disabled > span,
-.pagination ul > .disabled > a,
-.pagination ul > .disabled > a:hover,
-.pagination ul > .disabled > a:focus {
-  color: #999999;
-  cursor: default;
-  background-color: transparent;
-}
-
-.pagination ul > li:first-child > a,
-.pagination ul > li:first-child > span {
-  border-left-width: 1px;
-  -webkit-border-bottom-left-radius: 4px;
-          border-bottom-left-radius: 4px;
-  -webkit-border-top-left-radius: 4px;
-          border-top-left-radius: 4px;
-  -moz-border-radius-bottomleft: 4px;
-  -moz-border-radius-topleft: 4px;
-}
-
-.pagination ul > li:last-child > a,
-.pagination ul > li:last-child > span {
-  -webkit-border-top-right-radius: 4px;
-          border-top-right-radius: 4px;
-  -webkit-border-bottom-right-radius: 4px;
-          border-bottom-right-radius: 4px;
-  -moz-border-radius-topright: 4px;
-  -moz-border-radius-bottomright: 4px;
-}
