--- a/oceanmin/web/mobile/css/contact_us.css
+++ b/oceanmin/web/mobile/css/contact_us.css
@@ -53,12 +53,14 @@
     width: 100%;
     height: 46px;
     margin-bottom:20px;
+    border: 1px solid #d8d8d8;
 }
 .leave_message textarea{
-    font-size: 1.4rem;
+    font-size: 2.0rem;
     width: 100%;
     height: 120px;
     margin-bottom:30px;
+    border: 1px solid #d8d8d8;
 }
 .leave_message .contact_us_submit{
     font-size: 1.8rem;
@@ -127,12 +129,14 @@
         width: 100%;
         height: 46px;
         margin-bottom:20px;
+        border: 1px solid #d8d8d8;
     }
     .leave_message textarea{
-        font-size: 1.4rem;
+        font-size: 2.0rem;
         width: 100%;
         height: 120px;
         margin-bottom:30px;
+        border: 1px solid #d8d8d8;
     }
     .leave_message .contact_us_submit{
         font-size: 1.8rem;
@@ -202,12 +206,14 @@
         width: 100%;
         height: 46px;
         margin-bottom:20px;
+        border: 1px solid #d8d8d8;
     }
     .leave_message textarea{
-        font-size: 1.9rem;
+        font-size: 2.0rem;
         width: 100%;
         height: 120px;
         margin-bottom:30px;
+        border: 1px solid #d8d8d8;
     }
     .leave_message .contact_us_submit{
         font-size: 1.8rem;
