--- a/oceanmin/web/mobile/css/home.css
+++ b/oceanmin/web/mobile/css/home.css
@@ -61,11 +61,19 @@
     font-size: 1.4rem;
     margin-bottom: 30px;
 }
+.swiper-container-home{
+    width: 100%;
+    height: auto;
+    padding: 0 0 40px;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+}
 .recommend{
     display: inline-block;
     float: left;
-    margin: 0 2.67%;
-    width: 44.66%;
+    margin: 0 10px;
+    width: calc(100% - 20px);
     text-align: center;
 }
 .recommend_fa{
@@ -87,8 +95,8 @@
     text-align: left;
     font-size: 1.4rem;
     color:#2b2c33;
-    height:31px;
-    margin: 10px 0 30px 0;
+    height:35px;
+    margin: 10px 0 25px 0;
     text-overflow: -o-ellipsis-lastline;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -98,3 +106,39 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
 }
+.swiper-button-prev:before{
+    content: "pre" !important;
+    font-size: 14px !important;
+}
+.swiper-button-prev{
+    background-image: none !important;
+    display: block !important;
+    border: 1px solid #d8d8d8 !important;
+    padding: 5px 15px !important;
+    top:100% !important ;
+     width: 60px  !important ;
+     height: auto  !important ;
+    margin-top: -40px !important ;
+    left: 30% !important;
+}
+.swiper-button-next:before{
+    content: "next" !important;
+    font-size: 14px !important;
+}
+.swiper-button-next{
+    background-image: none !important;
+    display: block !important;
+    border: 1px solid #d8d8d8 !important;
+    padding: 5px 15px !important;
+    top:100% !important ;
+    width: 60px  !important ;
+    height: auto  !important ;
+    margin-top: -40px !important ;
+    right: 30% !important;
+}
+.swiper-pagination-fraction{
+    font-family:"Microsoft YaHei UI" !important;
+    bottom: 17px !important;
+    font-size: 1.6rem !important;
+}
+
