--- a/oceanmin/web/css/home.css
+++ b/oceanmin/web/css/home.css
@@ -112,9 +112,12 @@
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 2;
+    line-height: 1.3;
     -webkit-box-orient: vertical;
 }
 #owl-carousel_second .owl-dots {
     display: block !important;
 }
+
+
 
